crates/ars-components/src/overlay/presence/snapshots/ars_components__overlay__presence__tests__presence_root_unmounted.snap
---
source: crates/ars-components/src/overlay/presence/mod.rs
assertion_line: 561
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-presence",
            ),
            String(
                "mounted",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "presence",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
    ],
    styles: [],
}
